actuliazion de sector servicios y footer

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                         <div class="checklist-servicio">
                             <div class="service">
                                 <h3 class="n-service"><span class="number">1</span>desarrollador web</h3>
-                                <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab autem enim illum dolorum nisi. Aspernatur.</p>
+                                <p>Inspirado en las nuevas tecnologias,podre dar solucion a tus requeromientos </p>
                             </div>
                             <div class="service">
                                 <h3 class="n-service"><span class="number">2</span>Base de Datos</h3>
@@ -87,7 +87,7 @@
                     <div class="contact-us">
                         <h2 class="brand">Fernando Quezada Puño &copy; </h2>
                         <p>Si deseas optener mayor info sobre mi  solo debes:</p>
-                        <h3 class="contacto-titulo">Contartame 🢃 o segirme en mis redes 🢂</h3>
+                        <h3 class="contacto-titulo">Contactarme 🢃 o segirme en mis redes 🢂</h3>
                         <p class="contacto-texto"></p>
                         <a href="mailto:fdoquezadapuno@gmail.com" class="contacto-email">fdoquezadapuno@gmail.com</a>
                     </div>
