actuliazion de sector servicios y footer

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         
             </section>
             <section class="contenedor" id="expertos">
-                <h2 class="subtitulo">Experto en:</h2>
+                <h2 class="subtitulo">Conocimientos en:</h2>
                 <section class="experts">
                     <div class="cont-expert">
                         <img src="img/designado.svg" alt="">
@@ -86,7 +86,7 @@
             <div class="contenedor footer-content">
                     <div class="contact-us">
                         <h2 class="brand">Fernando Quezada Puño &copy; </h2>
-                        <p>Si deseas optener mayor info sobre mi  solo debes:</p>
+                        <p>Si deseas  mayor info sobre mi  solo debes:</p>
                         <h3 class="contacto-titulo">Contactarme 🢃 o segirme en mis redes 🢂</h3>
                         <p class="contacto-texto"></p>
                         <a href="mailto:fdoquezadapuno@gmail.com" class="contacto-email">fdoquezadapuno@gmail.com</a>
