actuliazion de sector servicios y footer

--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
                         <div class="checklist-servicio">
                             <div class="service">
                                 <h3 class="n-service"><span class="number">1</span>desarrollador web</h3>
-                                <p>Inspirado en las nuevas tecnologias,podre dar solucion a tus requeromientos </p>
+                                <p>Inspirado en las nuevas tecnologias,podre dar solucion a tus requerimientos </p>
                             </div>
                             <div class="service">
                                 <h3 class="n-service"><span class="number">2</span>Base de Datos</h3>
-                                <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab autem enim illum dolorum nisi. Aspernatur.</p>
+                                <p> conocimientos en manejador de bases de datos SQLite,PostgreSQL,  </p>
                             </div>
                             <div class="service">
                                 <h3 class="n-service"><span class="number">3</span>Soporte</h3>
