actuliazion de sector servicios y footer

--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
             </nav>
             <div class="contendor head">
                 <h1 class="titulo">Fernando  Quezada Puño</h1>
-                <h1 class="encabezado">Conoce Mi Portafolio</h1>
-                <p class="copy">soy experto en tus necesidades de informatica </p> 
+                <h1 class="encabezado">Conoce mi Portafolio</h1>
+                <p class="copy">Apoyandote en tus necesidades de informática </p> 
             </div>
         </header>
             <main>  
@@ -34,16 +34,16 @@
                         <img src="img/lista.svg" alt="">
                         <div class="checklist-servicio">
                             <div class="service">
-                                <h3 class="n-service"><span class="number">1</span>desarrollador web</h3>
-                                <p>Inspirado en las nuevas tecnologias,podre dar solucion a tus requerimientos </p>
+                                <h3 class="n-service"><span class="number">1</span>Desarrollador Web</h3>
+                                <p>Inspirado en las nuevas tecnologías, podre dar solución a tus requerimientos </p>
                             </div>
                             <div class="service">
                                 <h3 class="n-service"><span class="number">2</span>Base de Datos</h3>
-                                <p> conocimientos en manejador de bases de datos SQLite,PostgreSQL,  </p>
+                                <p> Conocimientos en manejador de bases de datos SQLite y PostgreSQL  </p>
                             </div>
                             <div class="service">
                                 <h3 class="n-service"><span class="number">3</span>Soporte</h3>
-                                <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab autem enim illum dolorum nisi. Aspernatur.</p>
+                                <p> Soporte técnico presencial y remoto </p>
                             </div>
                         </div>
                     </div>
@@ -86,8 +86,8 @@
             <div class="contenedor footer-content">
                     <div class="contact-us">
                         <h2 class="brand">Fernando Quezada Puño &copy; </h2>
-                        <p>Si deseas  mayor info sobre mi  solo debes:</p>
-                        <h3 class="contacto-titulo">Contactarme 🢃 o segirme en mis redes 🢂</h3>
+                        <p>Si deseas  mayor info sobre mi  solo debes</p>
+                        <h3 class="contacto-titulo">Contactame 🢃 o segirme en mis redes 🢂</h3>
                         <p class="contacto-texto"></p>
                         <a href="mailto:fdoquezadapuno@gmail.com" class="contacto-email">fdoquezadapuno@gmail.com</a>
                     </div>
