actuliazion de sector servicios y footer

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <div class="contendor head">
                 <h1 class="titulo">Fernando  Quezada Puño</h1>
                 <h1 class="encabezado">Conoce mi Portafolio</h1>
-                <p class="copy">Apoyandote en tus necesidades de informática </p> 
+                <p class="copy">Apoyándote en tus necesidades de informática </p> 
             </div>
         </header>
             <main>  
