--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <section class="services contenedor" id="servicio">
                     <h2 class="subtitulo">MIS SERVICIOS</h2>
                     <div class="contenedor-servicio">
-                        <img src="img/lista.svg" alt="">
+                        <img src="img/escritorio1.svg" alt="">
                         <div class="checklist-servicio">
                             <div class="service">
                                 <h3 class="n-service"><span class="number">1</span>Desarrollador Web</h3>
@@ -70,7 +70,7 @@
                         <h3 class="n-expert">Python</h3>
                     </div>
                     <div class="cont-expert">
-                        <img src="img/lista.svg" alt="">
+                        <img src="img/SEO_Outline.svg" alt="">
                         <h3 class="n-expert">SEO</h3>
                     </div>
                     <div class="cont-expert">
